oc-panel header menu no longer “jumps” on hover

--- a/themes/default/css/admin-styles.css
+++ b/themes/default/css/admin-styles.css
@@ -150,10 +150,10 @@ ul.plholder li.placeholder:before {
 /*HEADER*/
 
 .header-container{padding: 0px 20px 0px 0px;}
-.navbar-nav li:hover{border-bottom: 3px solid #46b8da;}
+.navbar-nav li a:hover{border-bottom: 3px solid #46b8da; padding-bottom:12px;}
 .nav.navbar-nav > li a , .navbar-brand{color: #fff;}
 .navbar-brand{color: #fff!important;}
-.dropdown-menu li a{color:#000!important;}
+.dropdown-menu li a{color:#000!important; border-bottom:none!important; padding-bottom:3px!important;}
 
 /*Sidebar*/
 .panel-title a {color:#000;text-decoration: none;}
